--- a/furniture_Sales_Management/src/view/PersonList.form
+++ b/furniture_Sales_Management/src/view/PersonList.form
@@ -52,7 +52,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tblworkers">
+        <Component class="javax.swing.JTable" name="tblPeople">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Century Gothic" size="14" style="0"/>
